# django-snacks

./: db.sqlite3  pyproject.toml
snackes/: tests.py
snacks_project/: settings.py  urls.py
templates/: base.html  home.html
